src/components/CreditCards/creditCards.module.scss
.container {
  display: flex;
  gap: 1.381rem;
  flex-direction: column;
  align-items: center;
}

.brandList {
  display: flex;
  gap: 1.311rem;
  list-style: none;
  li {
    transition: transform 0.2s;
  }
}

.paymentProvider {
  display: flex;
  height: max-content;
  align-items: center;
  gap: 0.7rem;
  color: var(--gray-2);
  font-size: 1rem;
  font-weight: 400;
}

.isSelectedCard {
  transition: transform 0.2s;
  transform: scale(1.7);
}

